// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots House Hold Items Default 1`] = `
<v-card
  class="dashboard-card feed-card"
>
  <v-card-title
    primary-title=""
  >
    <div
      class="title"
    >
      <span>
        <span>
          Household Items
        </span>
      </span>
    </div>
  </v-card-title>
   
  <div
    class="card-scroll-content"
  >
    <v-container
      fluid=""
    >
      <div
        class="card-scroll-content"
      >
        <v-list-tile
          class="v-list-item"
        >
          <v-list-tile-content>
            <v-subheader>
              Toilet Paper
            </v-subheader>
             
            <v-progress-linear
              height="5"
              value="15"
            />
          </v-list-tile-content>
           
          <v-list-tile-action>
            <v-btn
              flat=""
              small=""
            >
              View
            </v-btn>
          </v-list-tile-action>
        </v-list-tile>
        <v-list-tile
          class="v-list-item"
        >
          <v-list-tile-content>
            <v-subheader>
              Paper Towels
            </v-subheader>
             
            <v-progress-linear
              height="5"
              value="50"
            />
          </v-list-tile-content>
           
          <v-list-tile-action>
            <v-btn
              flat=""
              small=""
            >
              View
            </v-btn>
          </v-list-tile-action>
        </v-list-tile>
        <v-list-tile
          class="v-list-item"
        >
          <v-list-tile-content>
            <v-subheader>
              Dish Soap
            </v-subheader>
             
            <v-progress-linear
              height="5"
              value="80"
            />
          </v-list-tile-content>
           
          <v-list-tile-action>
            <v-btn
              flat=""
              small=""
            >
              View
            </v-btn>
          </v-list-tile-action>
        </v-list-tile>
        <v-list-tile
          class="v-list-item"
        >
          <v-list-tile-content>
            <v-subheader>
              Swiffers
            </v-subheader>
             
            <v-progress-linear
              height="5"
              value="90"
            />
          </v-list-tile-content>
           
          <v-list-tile-action>
            <v-btn
              flat=""
              small=""
            >
              View
            </v-btn>
          </v-list-tile-action>
        </v-list-tile>
        <v-list-tile
          class="v-list-item"
        >
          <v-list-tile-content>
            <v-subheader>
              Hand Soap
            </v-subheader>
             
            <v-progress-linear
              height="5"
              value="90"
            />
          </v-list-tile-content>
           
          <v-list-tile-action>
            <v-btn
              flat=""
              small=""
            >
              View
            </v-btn>
          </v-list-tile-action>
        </v-list-tile>
        <v-list-tile
          class="v-list-item"
        >
          <v-list-tile-content>
            <v-subheader>
              Tooth Paste
            </v-subheader>
             
            <v-progress-linear
              height="5"
              value="93"
            />
          </v-list-tile-content>
           
          <v-list-tile-action>
            <v-btn
              flat=""
              small=""
            >
              View
            </v-btn>
          </v-list-tile-action>
        </v-list-tile>
        <v-list-tile
          class="v-list-item"
        >
          <v-list-tile-content>
            <v-subheader>
              Razor Blades
            </v-subheader>
             
            <v-progress-linear
              height="5"
              value="100"
            />
          </v-list-tile-content>
           
          <v-list-tile-action>
            <v-btn
              flat=""
              small=""
            >
              View
            </v-btn>
          </v-list-tile-action>
        </v-list-tile>
        <v-list-tile
          class="v-list-item"
        >
          <v-list-tile-content>
            <v-subheader>
              Paper Plates
            </v-subheader>
             
            <v-progress-linear
              height="5"
              value="100"
            />
          </v-list-tile-content>
           
          <v-list-tile-action>
            <v-btn
              flat=""
              small=""
            >
              View
            </v-btn>
          </v-list-tile-action>
        </v-list-tile>
      </div>
       
    </v-container>
  </div>
</v-card>
`;

exports[`Storyshots House Hold Items/List Default 1`] = `
<div
  class="card-scroll-content"
>
  <v-list-tile
    class="v-list-item"
  >
    <v-list-tile-content>
      <v-subheader>
        Toilet Paper
      </v-subheader>
       
      <v-progress-linear
        height="5"
        value="15"
      />
    </v-list-tile-content>
     
    <v-list-tile-action>
      <v-btn
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
  <v-list-tile
    class="v-list-item"
  >
    <v-list-tile-content>
      <v-subheader>
        Paper Towels
      </v-subheader>
       
      <v-progress-linear
        height="5"
        value="50"
      />
    </v-list-tile-content>
     
    <v-list-tile-action>
      <v-btn
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
  <v-list-tile
    class="v-list-item"
  >
    <v-list-tile-content>
      <v-subheader>
        Dish Soap
      </v-subheader>
       
      <v-progress-linear
        height="5"
        value="80"
      />
    </v-list-tile-content>
     
    <v-list-tile-action>
      <v-btn
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
  <v-list-tile
    class="v-list-item"
  >
    <v-list-tile-content>
      <v-subheader>
        Swiffers
      </v-subheader>
       
      <v-progress-linear
        height="5"
        value="90"
      />
    </v-list-tile-content>
     
    <v-list-tile-action>
      <v-btn
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
  <v-list-tile
    class="v-list-item"
  >
    <v-list-tile-content>
      <v-subheader>
        Hand Soap
      </v-subheader>
       
      <v-progress-linear
        height="5"
        value="90"
      />
    </v-list-tile-content>
     
    <v-list-tile-action>
      <v-btn
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
  <v-list-tile
    class="v-list-item"
  >
    <v-list-tile-content>
      <v-subheader>
        Tooth Paste
      </v-subheader>
       
      <v-progress-linear
        height="5"
        value="93"
      />
    </v-list-tile-content>
     
    <v-list-tile-action>
      <v-btn
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
  <v-list-tile
    class="v-list-item"
  >
    <v-list-tile-content>
      <v-subheader>
        Razor Blades
      </v-subheader>
       
      <v-progress-linear
        height="5"
        value="100"
      />
    </v-list-tile-content>
     
    <v-list-tile-action>
      <v-btn
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
  <v-list-tile
    class="v-list-item"
  >
    <v-list-tile-content>
      <v-subheader>
        Paper Plates
      </v-subheader>
       
      <v-progress-linear
        height="5"
        value="100"
      />
    </v-list-tile-content>
     
    <v-list-tile-action>
      <v-btn
        flat=""
        small=""
      >
        View
      </v-btn>
    </v-list-tile-action>
  </v-list-tile>
</div>
`;

exports[`Storyshots House Hold Items/List No Items 1`] = `
<div>
  <v-subheader>
    It looks like there are no items in the list.
  </v-subheader>
</div>
`;

exports[`Storyshots House Hold Items/Single Item Status Green 1`] = `
<v-list-tile
  class="v-list-item"
>
  <v-list-tile-content>
    <v-subheader>
      Swiffer
    </v-subheader>
     
    <v-progress-linear
      height="5"
      value="75"
    />
  </v-list-tile-content>
   
  <v-list-tile-action>
    <v-btn
      flat=""
      small=""
    >
      View
    </v-btn>
  </v-list-tile-action>
</v-list-tile>
`;

exports[`Storyshots House Hold Items/Single Item Status Red 1`] = `
<v-list-tile
  class="v-list-item"
>
  <v-list-tile-content>
    <v-subheader>
      Swiffer
    </v-subheader>
     
    <v-progress-linear
      height="5"
      value="15"
    />
  </v-list-tile-content>
   
  <v-list-tile-action>
    <v-btn
      flat=""
      small=""
    >
      View
    </v-btn>
  </v-list-tile-action>
</v-list-tile>
`;

exports[`Storyshots House Hold Items/Single Item Status Yellow 1`] = `
<v-list-tile
  class="v-list-item"
>
  <v-list-tile-content>
    <v-subheader>
      Swiffer
    </v-subheader>
     
    <v-progress-linear
      height="5"
      value="50"
    />
  </v-list-tile-content>
   
  <v-list-tile-action>
    <v-btn
      flat=""
      small=""
    >
      View
    </v-btn>
  </v-list-tile-action>
</v-list-tile>
`;
